criando arquivo html

--- a/exercicio.html
+++ b/exercicio.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercicio html</title>
 </head>
 <body>
-    
+    <h1>Formulario de cadastro</h1>
+    <form>
+        <caption>Preencha os dados para se cadastrar</caption> <br>
+        <br><label for="name">Nome :</label>
+        <input id="name" type="text" placeholder="Digite seu nome completo">
+        <br><label for="email">E-mail :</label>
+        <input id="email" type="email" placeholder="Digite seu E-mail">
+        <br><label for="password">Senha :</label>
+        <input id="password" type="password" placeholder="Digite sua senha">
+        <br><button type="submit"> CADASTRAR </button>
+    </form>
 </body>
 </html>
